tests/fixtures/fail/stdlib/stdlib_async_timeout_expired_vm.walrus
import "std/async" as asyncx;

let too_slow = asyncx.timeout(asyncx.sleep(20), 1);
println(await too_slow);
